# Tauri

./: et --hard [ID-COMMIT]  package.json
.github/workflows/: android.yml  android.yml:  build.yml  main.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
