[package]
name = "cakru"
version = "0.1.0"
description = "Odfiz Zip Tool"
authors = ["Odfiz"]
edition = "2021"

[lib]
name = "odfiz_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
